# Focusbridge

./: .env.example  .gitignore  BUILD_DECISIONS.md  CONTRIBUTING.md  README.md
.github/workflows/: android-ci.yml  desktop-ci.yml  relay-ci.yml
.omc/state/: hud-state.json  hud-stdin-cache.json
android/: settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/gradle/: libs.versions.toml
desktop/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
desktop/core/: Cargo.toml
desktop/core/src/: cert.rs  handler.rs  lib.rs  oauth_pkce.rs  priority.rs  protocol.rs  qr.rs  secure_envelope.rs  study_mode.rs
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 001_initial.sql
desktop/src-tauri/src/: desktop_notifications.rs  lib.rs  main.rs  state.rs
desktop/src-tauri/src/commands/: app_rules_cmd.rs  auth_cmd.rs  diagnostics_cmd.rs  mod.rs  notification_cmd.rs  pairing_cmd.rs  settings_cmd.rs  windows_setup_cmd.rs
desktop/src-tauri/src/db/: migrations.rs  models.rs  store.rs
desktop/src-tauri/src/pairing/: cert_manager.rs  device_store.rs  mod.rs  qr_generator.rs
desktop/src-tauri/src/priority/: mod.rs  rules.rs  study_mode.rs
desktop/src-tauri/src/server/: handler.rs  mod.rs  tls.rs  ws_server.rs
desktop/src-tauri/src/sync/: mod.rs  protocol.rs  relay_client.rs
desktop/src-tauri/src/tray/: menu.rs
desktop/src-tauri/tests/: schema_compat.rs
desktop/src/components/: AppRulesPanel.tsx  AuthGate.tsx  ConnectionStatus.tsx  EmptyState.tsx  FilterPanel.tsx  NotificationCard.tsx  NotificationList.tsx  PairingQR.tsx  PreviousConnections.tsx  SettingsPanel.tsx  StudyModeToggle.tsx
desktop/src/hooks/: useConnection.ts  useNotifications.ts  useStudyMode.ts
desktop/src/lib/: accountSession.test.ts  accountSession.ts  firebaseAuth.ts
docs/: PROJECT_MEMORY.md  architecture.md  firebase-auth-setup.md  oem-optimization-guide.md  phase-audit.md  privacy-policy.md  relay-v1.1-plan.md  release-checklist.md  security-and-rules-next-plan.md  security-model.md
relay/: Cargo.toml  Dockerfile  config.toml
relay/src/: account_store.rs  auth.rs  config.rs  main.rs  metrics.rs  relay.rs  session.rs  tls.rs
relay/tests/: auth_test.rs  queue_ttl_test.rs  routing_test.rs
shared/: protocol.json
(+78 files in other folders)
