[package]
name = "focusbridge-relay"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
actix-web = { version = "4.5", default-features = false, features = ["macros", "rustls-0_22"] }
actix-ws = "0.2"
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = "0.22"
rustls-pemfile = "2.1"
uuid = { version = "1.8", features = ["v4"] }
dashmap = "5.5"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
