[package]
name = "focusbridge-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.22"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
rcgen = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
